# temps

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE_CHECKLIST_v0.0.7.md  SECURITY.md  _typos.toml  cliff.toml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: e2e-tests.yml  release.yml  rust-tests.yml  sandbox-images-beta.yml
acceptance-tests/: .gitignore  README.md  package.json  tsconfig.json
acceptance-tests/runner/: report.ts  run.ts  tools.ts  verifier.ts
apps/temps-cli/: README.md  openapi.json  package.json
crates/temps-auth/: Cargo.toml
crates/temps-backup/: Cargo.toml
crates/temps-backup-core/: Cargo.toml
crates/temps-backup-core/src/: config.rs  engine.rs  error.rs  executor.rs  lib.rs  notifier.rs  processor.rs  queue.rs  runner.rs  timeouts.rs
crates/temps-cli/: Cargo.toml
crates/temps-config/: Cargo.toml
crates/temps-core/: Cargo.toml  templates.yaml
crates/temps-database/: Cargo.toml
crates/temps-domains/: Cargo.toml
crates/temps-edge/: Cargo.toml
crates/temps-email/: Cargo.toml
crates/temps-error-tracking/: Cargo.toml
crates/temps-external-plugins/: Cargo.toml
crates/temps-git/: Cargo.toml
crates/temps-memory/: Cargo.toml
crates/temps-monitoring/: Cargo.toml
crates/temps-observability/: Cargo.toml
crates/temps-observability/src/: cursor.rs  error.rs  filters.rs  lib.rs  plugin.rs  service.rs  types.rs
crates/temps-observability/src/handlers/: events.rs  mod.rs
crates/temps-observability/tests/: merge_integration.rs
crates/temps-plugin-sdk/: Cargo.toml
crates/temps-projects/: Cargo.toml
crates/temps-providers/: Cargo.toml
crates/temps-proxy/: Cargo.toml
crates/temps-query/: Cargo.toml
crates/temps-query-mongodb/: Cargo.toml
crates/temps-query-s3/: Cargo.toml
crates/temps-webhooks/: Cargo.toml
docs/: README.md  RELEASING.md  release-testing.md
docs/adr/: 013-sandbox-egress-credential-proxy.md  (+3 more)
scripts/: README.md  build-sandbox-images.sh  release.sh
web/: openapi-ts.config.ts  package.json  rsbuild.config.ts  tsconfig.json
(+831 files in other folders)
