[package]
name = "temps-backup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# Engine-agnostic backup queue primitives (ADR-014).
#
# Dependency rule: engines (in temps-providers) depend on THIS crate, not the
# other way around. This crate must NOT depend on temps-providers or
# temps-backup to avoid circular dependencies.

[dependencies]
temps-core = { path = "../temps-core" }
temps-entities = { path = "../temps-entities" }

sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = "0.1.17"
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["full"] }
