[package]
name = "temps-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
utoipa = { workspace = true, features = ["chrono"] }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
temps-migrations = { path = "../temps-migrations" }
sea-orm-migration = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
